DevOps/17-devsecops/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw-devsecops
  namespace: s17-devsecops
  labels:
    app.kubernetes.io/name: hw-devsecops
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hw-devsecops
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
